--- a/TwitterClone.API/appsettings.json
+++ b/TwitterClone.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": 
+  {
+    "TwitterCloneCs": "Server=localhost\\SQLEXPRESS;Database=TwitterClone;Trusted_Connection=true"
+  }
+  
 }
