--- a/TwitterClone.API/appsettings.json
+++ b/TwitterClone.API/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": 
-  {
+
+  "ConnectionStrings": {
     "TwitterCloneCs": "Server=localhost\\SQLEXPRESS;Database=TwitterClone;Trusted_Connection=true"
   }
-  
+
 }
