--- a/TwitterClone.API/TwitterClone.API.csproj
+++ b/TwitterClone.API/TwitterClone.API.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TwitterClone.Application\TwitterClone.Application.csproj" />
     <ProjectReference Include="..\TwitterClone.Core\TwitterClone.Core.csproj" />
     <ProjectReference Include="..\TwitterClone.Infrastructure\TwitterClone.Infrastructure.csproj" />
   </ItemGroup>
