Implement Auth Service

--- a/TwitterClone.API/appsettings.json
+++ b/TwitterClone.API/appsettings.json
@@ -9,6 +9,11 @@
 
   "ConnectionStrings": {
     "TwitterCloneCs": "Server=localhost\\SQLEXPRESS;Database=TwitterClone;Trusted_Connection=true"
+  },
+  "Jwt": {
+    "Key": "Esta é minha chave secreta para proteger o token",
+    "Issuer": "TwitterClone",
+    "Audience" :  "User"
   }
 
 }
